result metric updated